fixed the scrollbar problem

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -117,8 +117,8 @@ h1 {
 
 .offscreen {
   position: absolute;
-  left: 9999px;
-  top: 9999px;
+  left: -9999px;
+  top: -9999px;
 }
 
 .hide {
